# py-epc-qr

./: .gitignore  README.md  license.md  pyproject.toml  readme.md
.github/workflows/: black.yml  pytest.yml
py_epc_qr/: __init__.py  __main__.py  checks.py  cli.py  constants.py  main.py  transaction.py
tests/: template_version_002_broken.yaml  test_cli.py  test_py_epc_qr.py
tests/data/: qr_version_001.txt  qr_version_002.txt  template.yaml
