[tool.poetry]
name = "py-epc-qr"
version = "0.1.0"
description = ""
authors = ["timueh <tillmann.muehlpfordt@kit.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"
qrcode = "^7.3.1"
Pillow = "^9.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
